test/runtime/fail/comments/missing_terminator.hy

// expect error: Unterminated block comment

/*
hello
